<resources>
    <string name="app_name">Heal City</string>
    <string name="title_home">Me</string>
    <string name="title_dashboard">Mission</string>
    <string name="title_notifications">Map</string>
    <string name="personal">Personal</string>
    <string name="daily">Daily</string>
    <string name="add_mission">Add A New Personal Mission</string>

    <string name="current_step">Current Steps:</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="resume">Resume</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="enter_a_title">Enter a title...</string>
    <string name="type">Type:</string>
    <string name="number">Number</string>

    <string name="player_stat">Player Statistics</string>
    <string name="achievement">Player Achievement</string>
    <string name="target_goal">Target Goals:</string>
    <string name="no_achievement">No achivement yet.\nGo to <B>Mission</B> tab to get started.</string>
    <string name="today">Today</string>
    <string name="total">Total</string>
    <string name="stat_steps">Steps:</string>
    <string name="stat_exp">Experience:</string>
    <string name="places_visited">Places Visited:</string>
    <string name="steps_daily">Steps Daily</string>
    <string name="meters">Meters</string>
    <string name="point">Points</string>
    <string name="checked_in">Checked In?</string>
    <string name="go_to_setting">Go to app setting</string>
    <string name="level">Level</string>

    <string name="nearby">Nearby Places</string>
    <string name="no_location_permission">This app need location permission\n\nClick button below to enter setting\n and enable location permission</string>
    <string name="loading_locations">Loading nearby places..</string>
    <string name="loading_map">Loading map..</string>
    <string name="no_nearby">No nearby places found.\nPlease check your connection.\n\n<b>Tip</b>:\nClick on the Map tab to refresh :)</string>

    <string name="default_name">Name</string>
    <string name="default_level">Player_Level</string>
    <string name="default_achievement_name">ACHIEVEMENT_NAME</string>
    <string name="default_date">NO_DATE</string>
    <string name="default_exp">1/10</string>
    <string name="default_zero">0</string>
    <string name="start_walking">Start Walking!</string>

    <string name="tutorial_next_button">NEXT</string>
    <string name="tutorial_skip_button">SKIP</string>
    <string name="welcome_text">Welcome to Heal City!</string>
    <string name="welcome_descrip">Heal City is a game that encourages you to be physically active while incorporating a rewarding experience. Enjoy!</string>
    <string name="page_one_descrip">This is the Me Tab. Here is where you\'ll see your Statistics, Goals, and Achievements throughout your journey.</string>
    <string name="page_two_descrip">This is the Missions Tab. From here you can add your personal mission or simply just start walking! Your goal and distance will be recorded here.</string>
    <string name="page_three_descrip">This is the Map Tab. Here is where you\'ll be able to search for nearby places around you to check in for your chosen location.</string>

    <string-array name="mission_type">
        <item>Walk</item>
        <item>Check-in</item>
    </string-array>

    <string-array name="mission_distance">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="title_activity_create_player">Create Player</string>
    <string name="button_create">Create</string>
    <string name="create_tutorial_text">Let\'s start by creating your character.\n\nThe name you choose will be your player name for this game.\n\nTarget goals are the number of steps you are aiming to achieve.</string>

</resources>
