<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="cmsc436.rpg.healcity.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_me" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="cmsc436.rpg.healcity.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_missions" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="cmsc436.rpg.healcity.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_map" />
</navigation>