<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundScreen">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

    </LinearLayout>

    <Button

        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@null"
        android:fontFamily="sans-serif"
        android:text="@string/tutorial_next_button"
        android:textColor="#F7FAF8"
        android:textStyle="bold"
        />

    <Button

        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@null"
        android:text="@string/tutorial_skip_button"
        android:textColor="@android:color/white" />

    <TextView

        android:id="@+id/mapPageDescription"
        android:layout_width="283dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="68dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/page_three_descrip"
        android:textAlignment="center"
        android:textColor="#F3EEEE"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>