<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundScreen">

    <LinearLayout
        android:id="@+id/bottomBarLayout"
        android:layout_width="412dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="-1dp"
        android:layout_marginBottom="0dp"
        android:background="#2196F3"
        android:gravity="center"
        android:orientation="horizontal"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false" />

    <Button

        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@null"
        android:fontFamily="sans-serif"
        android:text="@string/tutorial_next_button"
        android:textColor="#F7FAF8"
        android:textStyle="bold"
        />

    <Button

        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@null"
        android:text="@string/tutorial_skip_button"
        android:textColor="@android:color/white" />

    <TextView

        android:id="@+id/mapPageDescription"
        android:layout_width="319dp"
        android:layout_height="139dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="75dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/page_three_descrip"
        android:textAlignment="center"
        android:textColor="#F3EEEE"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/missionsPageImageView"
        android:layout_width="333dp"
        android:layout_height="578dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="112dp"
        app:srcCompat="@drawable/map_page" />

</RelativeLayout>